# advent-of-code-2024

./: README.md  pyproject.toml
src/: aoc_llm_solver.py
src/day1/: solution_part1.py  solution_part2.py
src/day10/: solution_part1_try1_openai_gpt_4o.py  solution_part2_try1_openai_gpt_4o.py
src/day10/input/: description_part1.txt  description_part2.txt
src/day11/: solution_part1_try1_openai_gpt_4o.py  solution_part2_try1_openai_gpt_4o.py  solution_part2_try2_openai_gpt_4o.py
src/day11/input/: description_part1.txt
src/day2/: solution_part1.py  solution_part2.py
src/day2/input/: description_part2.txt
src/day3/: solution_part1.py  solution_part2_try1.py  solution_part2_try3.py
src/day3/input/: description_part2.txt
src/day4/: solution_part1_try1.py  solution_part2_human_takeover.py  solution_part2_try1_openai_gpt_4o.py  solution_part2_try2_openai_gpt_4o.py
src/day4/unsolved-gpt4o/: solution_part2_try1.py  solution_part2_try2.py  (+5 more)
src/day5/: solution_part1_try1_openai_gpt_4o.py  solution_part2_try1_openai_gpt_4o.py
src/day6/: solution_part1_try1_openai_gpt_4o.py  solution_part2_try1_openai_gpt_4o.py
src/day7/: solution_part1_try1_openai_gpt_4o.py  solution_part2_try1_openai_gpt_4o.py
src/day8/: solution_part1_try1_openai_gpt_4o.py  solution_part2_try1_openai_gpt_4o.py
src/day9/: solution_part1_try1_openai_gpt_4o.py  solution_part1_try2_openai_gpt_4o.py  solution_part1_try3_openai_gpt_4o.py  solution_part1_try4_openai_gpt_4o.py  solution_part1_try5_openai_gpt_4o.py  solution_part1_try6_openai_gpt_4o.py  solution_part1_try7_openai_gpt_4o.py
(+31 files in other folders)
